# job_prep

./: AGENTS.md  CHANGELOG.md  README.md  SECURITY.md  SKILL.md  pyproject.toml
docs/: auth-keepalive.md  cli-reference.md  python-api.md  releasing.md  rpc-reference.md  stability.md  troubleshooting.md
docs/superpowers/specs/: 2026-05-14-preflight-auth-check-design.md
examples/: refresh_browser_cookies.py
scripts/: README.md  bulk_load.py  daily_brief.py  notebook_state.json  practice_platforms.md  preflight_auth.py  quiz_to_anki.py  requirements.txt  research_import.py  research_queries.yaml  resolve_links.py  run_with_preflight.ps1  schedule_anki.ps1  schedule_brief.ps1  sources.yaml
src/notebooklm/: __init__.py  _core.py  auth.py  client.py  types.py
src/notebooklm/cli/: download.py  helpers.py  note.py  session.py
tests/: conftest.py
tests/unit/: test_auth.py  test_client_keepalive.py  test_types.py
tests/unit/cli/: test_note.py  test_session.py
